@@ -62,6 +62,8 @@ bzr-svn 1.1.0					  UNRELEASED
   * Fix `push_merged_revisions = True` for committing to bound branches.
     (Jelmer Vernooij, #486811)
 
+  * Transport.is_readonly() is now respected. (Jelmer Vernooij, #731268)
+
  FEATURES
 
   * When roundtripping revisions a revision property with the Bazaar testament is
